[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://scripts/LoadSounds.gd" type="Script" id=2]

[sub_resource type="AudioStreamOGGVorbis" id=1]


[node name="SoundManager" type="Node"]

script/script = ExtResource( 1 )

[node name="Sounds" type="ResourcePreloader" parent="."]

resources = [ StringArray(  ), [  ] ]
script/script = ExtResource( 2 )

[node name="StreamedSounds" type="ResourcePreloader" parent="."]

resources = [ StringArray(  ), [  ] ]

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = SubResource( 1 )
stream/play = false
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="AmbiencePlayer" type="StreamPlayer" parent="."]

stream/stream = SubResource( 1 )
stream/play = false
stream/loop = false
stream/volume_db = -6.32
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="OtherStreamPlayer" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="p_SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 2
config/samples = null
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 0
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="en_SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 3
config/samples = null
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 0
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="env_SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = null
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 0
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="inter_SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 3
config/samples = null
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 0
default/reverb_send = 0.0
default/chorus_send = 0.0


